; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_d3d9.c_d3d9_load_texture.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_d3d9.c_d3d9_load_texture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3d9_texture_info = type { i32, i8*, i8* }

@d3d9_video_texture_load_wrap_d3d = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*, i32, i32)* @d3d9_load_texture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @d3d9_load_texture(i8* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca %struct.d3d9_texture_info, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i64 0, i64* %9, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = getelementptr inbounds %struct.d3d9_texture_info, %struct.d3d9_texture_info* %10, i32 0, i32 2
  store i8* %11, i8** %12, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = getelementptr inbounds %struct.d3d9_texture_info, %struct.d3d9_texture_info* %10, i32 0, i32 1
  store i8* %13, i8** %14, align 8
  %15 = load i32, i32* %8, align 4
  %16 = getelementptr inbounds %struct.d3d9_texture_info, %struct.d3d9_texture_info* %10, i32 0, i32 0
  store i32 %15, i32* %16, align 8
  %17 = call i32 @d3d9_video_texture_load_d3d(%struct.d3d9_texture_info* %10, i64* %9)
  %18 = load i64, i64* %9, align 8
  ret i64 %18
}

declare dso_local i32 @d3d9_video_texture_load_d3d(%struct.d3d9_texture_info*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
